# QYQuant

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  COMPONENT_DESIGN_UPGRADE.md  DESIGN.md  DESIGN_SYSTEM_UPDATE.md  PLAN.md  README.en.md  README.md  bash.exe.stackdump  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.development  .env.production  .env.test  .gitignore  Dockerfile  Dockerfile.celery  GoldStratagy(Step-By-Step).py  Makefile  app_legacy.py  docker-compose.yml  pyproject.toml  requirements.txt  test_db_connection.py
backend/app/: __init__.py  celery_app.py  config.py  errors.py  extensions.py  models.py  quota.py  schemas.py
backend/scripts/: create_admin.py  seed.py
backend/strategy_store/: GoldStepByStep.qys
backend/tests/: conftest.py  test_admin.py  test_akshare_provider.py  test_auth.py  test_backtest_summary.py  test_backtests.py  test_bots.py  test_community.py  test_contract.py  test_crypto.py  test_data_source_tasks.py  test_db_config.py  test_devfiles.py  test_env.py  test_error_parser.py  test_errors.py  test_example_strategies.py  test_files.py  test_forum.py  test_health.py  test_integration_adapters.py  test_integrations.py  test_integrations_registry.py  test_managed_bot_execution.py  test_market_data.py  test_marketplace.py  test_marketplace_import_constraints.py  test_models.py  test_notification_tasks.py  test_notifications.py  test_payments.py  test_presets.py  test_qsga_compiler.py  test_qsga_domain_verifier.py  test_qsga_guardrails.py  test_qsga_pipeline.py  (+18 more)
(+636 files in other folders)
